created a header with company name

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <script src="script.js"></script>
   </head>
   <body>
-    dskjl
+    <div
+      class="header"
+      style="
+        font-weight: bolder;
+        border-bottom: 1px solid black;
+        padding: 0.5em 0;
+      "
+    >
+      V's Yard Service
+    </div>
   </body>
 </html>
