created horizontal menu with hover effects

--- a/index.html
+++ b/index.html
@@ -18,5 +18,13 @@
     >
       V's Yard Service
     </div>
+    <div
+      class="experienceMenu"
+      style="display: flex; justify-content: space-between; align-items: center"
+    >
+      <div>Yard Work</div>
+      <div>Hauling</div>
+      <div>Handyman</div>
+    </div>
   </body>
 </html>
