displaying a single pair of before and after pictures for yard work

--- a/index.html
+++ b/index.html
@@ -26,5 +26,17 @@
       <div>Hauling</div>
       <div>Handyman</div>
     </div>
+    <div class="experienceContent">
+      <div class="contentHorizontal" id="yardWork">
+        <div>
+          <h2>Before</h2>
+          <img src="images/YardWork/yw1Before.jpg" alt="" />
+        </div>
+        <div>
+          <h2>After</h2>
+          <img src="images/YardWork/yw1After.jpg" alt="" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
