adjusted styles of before and after headers for pictures

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <div class="experienceContent">
       <div class="contentHorizontal" id="yardWork">
         <div>
-          <h2>Before</h2>
+          <p>Before</p>
           <img src="images/YardWork/yw1Before.jpg" alt="" />
         </div>
         <div>
-          <h2>After</h2>
+          <p>After</p>
           <img src="images/YardWork/yw1After.jpg" alt="" />
         </div>
       </div>
