--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
       <div>Hauling</div>
       <div>Handyman</div>
     </div>
-    <div class="experienceContent">
+    <div
+      class="experienceContent"
+      style="
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      "
+    >
       <div class="contentHorizontal" id="yardWork">
         <div>
           <p>Before</p>
