adjusted css to horizontally align pictures in parent div when it contains a border

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     >
       <div class="contentHorizontal" id="yardWork">
         <div>
-          <p>Before</p>
+          <div class="title">Before</div>
           <img src="images/YardWork/yw1Before.jpg" alt="" />
         </div>
         <div>
-          <p>After</p>
+          <div class="title" style="margin-top: 1em">After</div>
           <img src="images/YardWork/yw1After.jpg" alt="" />
         </div>
       </div>
