--- a/index.html
+++ b/index.html
@@ -20,31 +20,54 @@
     </div>
     <div
       class="experienceMenu"
-      style="display: flex; justify-content: space-between; align-items: center"
+      style="
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 2em;
+      "
     >
       <div>Yard Work</div>
       <div>Hauling</div>
       <div>Handyman</div>
     </div>
-    <div
-      class="experienceContent"
-      style="
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      "
-    >
-      <div class="contentHorizontal" id="yardWork">
-        <div>
-          <div class="title">Before</div>
-          <img src="images/YardWork/yw1Before.jpg" alt="" />
-        </div>
-        <div>
-          <div class="title" style="margin-top: 1em">After</div>
-          <img src="images/YardWork/yw1After.jpg" alt="" />
+    <div style="display: flex; justify-content: center; align-items: center">
+      <svg
+        id="leftArrow"
+        xmlns="http://www.w3.org/2000/svg"
+        width="32"
+        height="32"
+        fill="#000000"
+        viewBox="0 0 256 256"
+      >
+        <path
+          d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"
+        ></path>
+      </svg>
+      <div class="experienceContent" style="width: 80%">
+        <div class="contentHorizontal" id="yardWork">
+          <div style="padding: 1em 0">
+            <div class="title" style="margin-top: 0">Before</div>
+            <img src="images/YardWork/yw1Before.jpg" alt="" />
+          </div>
+          <div style="padding: 1em 0">
+            <div class="title">After</div>
+            <img src="images/YardWork/yw1After.jpg" alt="" />
+          </div>
         </div>
       </div>
+      <svg
+        id="rightArrow"
+        xmlns="http://www.w3.org/2000/svg"
+        width="32"
+        height="32"
+        fill="#000000"
+        viewBox="0 0 256 256"
+      >
+        <path
+          d="M221.66,133.66l-72,72a8,8,0,0,1-11.32-11.32L196.69,136H40a8,8,0,0,1,0-16H196.69L138.34,61.66a8,8,0,0,1,11.32-11.32l72,72A8,8,0,0,1,221.66,133.66Z"
+        ></path>
+      </svg>
     </div>
   </body>
 </html>
