--- a/index.html
+++ b/index.html
@@ -44,8 +44,16 @@
           d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"
         ></path>
       </svg>
-      <div class="experienceContent" style="width: 80%">
-        <div class="contentHorizontal" id="yardWork">
+      <div
+        class="experienceContent"
+        style="
+          width: 80%;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        "
+      >
+        <div class="contentHorizontal" id="yardWork1">
           <div style="padding: 1em 0">
             <div class="title" style="margin-top: 0">Before</div>
             <img src="images/YardWork/yw1Before.jpg" alt="" />
@@ -53,6 +61,16 @@
           <div style="padding: 1em 0">
             <div class="title">After</div>
             <img src="images/YardWork/yw1After.jpg" alt="" />
+          </div>
+        </div>
+        <div class="contentVertical" id="yardWork2" style="display: none">
+          <div style="padding: 1em 0">
+            <div class="title" style="margin-top: 0">Before</div>
+            <img src="images/YardWork/yw2Before.jpg" alt="" />
+          </div>
+          <div style="padding: 1em 0">
+            <div class="title">After</div>
+            <img src="images/YardWork/yw2After.jpg" alt="" />
           </div>
         </div>
       </div>
