--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
       <div>Hauling</div>
       <div>Handyman</div>
     </div>
-    <div style="display: flex; justify-content: center; align-items: center">
+    <!-- refactor: height property for div below - subtract from height of header content for responsiveness !!!!!! -->
+    <div
+      style="
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: calc(100vh - 150px);
+      "
+    >
       <svg
         id="leftArrow"
         style="padding-right: 0.25em"
@@ -54,7 +62,7 @@
           align-items: center;
         "
       >
-        <div class="contentHorizontal" id="yardWork1" style="display: none">
+        <div class="contentHorizontal" id="yardWork1">
           <div style="padding: 1em 0">
             <div class="title" style="margin-top: 0">Before</div>
             <img src="images/YardWork/yw1Before.jpg" alt="" />
@@ -64,7 +72,7 @@
             <img src="images/YardWork/yw1After.jpg" alt="" />
           </div>
         </div>
-        <div class="contentVertical" id="yardWork2" style="display: flex">
+        <div class="contentVertical" id="yardWork2" style="display: none">
           <div style="padding: 1em 0.25em">
             <div class="title" style="margin-top: 0">Before</div>
             <img src="images/YardWork/yw2Before.jpg" alt="" />
