--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
             <img src="images/YardWork/yw2After.jpg" alt="" />
           </div>
         </div>
+        <div class="contentVertical" id="yardWork3" style="display: none">
+          <div style="padding: 1em 0.25em">
+            <div class="title" style="margin-top: 0">Before</div>
+            <img src="images/YardWork/yw3Before.jpg" alt="" />
+          </div>
+          <div style="padding: 1em 0.25em">
+            <div class="title">After</div>
+            <img src="images/YardWork/yw3After.jpg" alt="" />
+          </div>
+        </div>
       </div>
       <svg
         id="rightArrow"
