--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
         </div>
         <div class="contentVertical" id="yardWork2" style="display: none">
           <div style="padding: 1em 0.25em">
-            <div class="title" style="margin-top: 0">Before</div>
+            <div class="title" style="font-size: 1.25em">Before</div>
             <img src="images/YardWork/yw2Before.jpg" alt="" />
           </div>
           <div style="padding: 1em 0.25em">
-            <div class="title">After</div>
+            <div class="title" style="font-size: 1.25em">After</div>
             <img src="images/YardWork/yw2After.jpg" alt="" />
           </div>
         </div>
         <div class="contentVertical" id="yardWork3" style="display: none">
           <div style="padding: 1em 0.25em">
-            <div class="title" style="margin-top: 0">Before</div>
+            <div class="title" style="font-size: 1.25em">Before</div>
             <img src="images/YardWork/yw3Before.jpg" alt="" />
           </div>
           <div style="padding: 1em 0.25em">
-            <div class="title">After</div>
+            <div class="title" style="font-size: 1.25em">After</div>
             <img src="images/YardWork/yw3After.jpg" alt="" />
           </div>
         </div>
