mapped out variables in js for menu options (yard work, hauling, handyman) click functionality

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         margin-top: 2em;
       "
     >
-      <div>Yard Work</div>
-      <div>Hauling</div>
-      <div>Handyman</div>
+      <div id="yardWorkBtn">Yard Work</div>
+      <div id="haulingBtn">Hauling</div>
+      <div id="handymanBtn">Handyman</div>
     </div>
     <!-- refactor: height property for div below - subtract from height of header content for responsiveness !!!!!! -->
     <div
@@ -55,6 +55,7 @@
       </svg>
       <div
         class="experienceContent"
+        id="yardWorkContent"
         style="
           width: 80%;
           display: flex;
