functionality for Yard Work menu button

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           display: flex;
           flex-direction: column;
           align-items: center;
+          display: none;
         "
       >
         <div class="contentHorizontal" id="yardWork1">
