--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
           </div>
         </div>
       </div>
+      <div id="haulingContent" style="display: none">haulingContent</div>
+      <div id="handymanContent" style="display: none">handymanContent</div>
       <svg
         id="rightArrow"
         style="padding-left: 0.25em"
