incorporated picture of truck and trailer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script defer src="script.js"></script>
   </head>
   <body>
+    <div class="homeSection" style="height: 100vh; width: 100vw"></div>
     <div
       class="header"
       style="
