--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
     <script defer src="script.js"></script>
   </head>
   <body>
-    <div class="homeSection" style="height: 100vh; width: 100vw"></div>
+    <div
+      class="homeSection"
+      style="height: 100vh; width: 100vw; position: relative"
+    >
+      <div
+        style="
+          position: absolute;
+          background-color: black;
+          opacity: 0.5;
+          width: inherit;
+          height: inherit;
+          z-index: 10;
+        "
+      ></div>
+    </div>
     <div
       class="header"
       style="
