made a copy of homeSection div HTML. will use it for contact section later on

--- a/index.html
+++ b/index.html
@@ -125,5 +125,20 @@
         ></path>
       </svg>
     </div>
+        <div
+      class="homeSection"
+      style="height: 100vh; width: 100vw; position: relative"
+    >
+      <div
+        style="
+          position: absolute;
+          background-color: black;
+          opacity: 0.5;
+          width: inherit;
+          height: inherit;
+          z-index: 10;
+        "
+      ></div>
+
   </body>
 </html>
