--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         ></path>
       </svg>
     </div>
-        <div
+    <div
       class="homeSection"
       style="height: 100vh; width: 100vw; position: relative"
     >
@@ -139,6 +139,6 @@
           z-index: 10;
         "
       ></div>
-
+    </div>
   </body>
 </html>
