--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </svg>
     </div>
     <div
-      class="homeSection"
+      class="contactSection"
       style="height: 100vh; width: 100vw; position: relative"
     >
       <div
