--- a/index.html
+++ b/index.html
@@ -21,7 +21,22 @@
           height: inherit;
           z-index: 10;
         "
-      ></div>
+      >
+        <h1 style="color: white; text-align: center">V's Yard Service</h1>
+        <h2
+          style="
+            color: white;
+            text-align: center;
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            text-wrap: nowrap;
+          "
+        >
+          Quality Work Affordably Priced!
+        </h2>
+      </div>
     </div>
     <div
       class="header"
