opacity does NOT affect home page text

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       class="homeSection"
       style="height: 100vh; width: 100vw; position: relative"
     >
+      <h1 class="homeSectionTxt" style="top: 0">V's Yard Service</h1>
+      <h2 class="homeSectionTxt" style="bottom: 0">
+        Quality Work Affordably Priced!
+      </h2>
       <div
         style="
           position: absolute;
@@ -21,22 +25,7 @@
           height: inherit;
           z-index: 10;
         "
-      >
-        <h1 style="color: white; text-align: center">V's Yard Service</h1>
-        <h2
-          style="
-            color: white;
-            text-align: center;
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            text-wrap: nowrap;
-          "
-        >
-          Quality Work Affordably Priced!
-        </h2>
-      </div>
+      ></div>
     </div>
     <div
       class="header"
