--- a/index.html
+++ b/index.html
@@ -110,7 +110,37 @@
           </div>
         </div>
         <div id="haulingContent" style="display: none">haulingContent</div>
-        <div id="handymanContent" style="display: none">handymanContent</div>
+        <div
+          class="experienceContent"
+          id="handymanContent"
+          style="
+            display: none;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+          "
+        >
+          <div class="contentHorizontal" id="handyman1">
+            <div style="padding: 1em 0">
+              <div class="title" style="margin-top: 0">Before</div>
+              <img src="images/handyman/before1.jpg" alt="" />
+            </div>
+            <div style="padding: 1em 0">
+              <div class="title">After</div>
+              <img src="images/handyman/after1.jpg" alt="" />
+            </div>
+          </div>
+          <div class="contentHorizontal" id="handyman2" style="display: none">
+            <div style="padding: 1em 0">
+              <div class="title" style="margin-top: 0">Before</div>
+              <img src="images/handyman/before2.jpg" alt="" />
+            </div>
+            <div style="padding: 1em 0">
+              <div class="title">After</div>
+              <img src="images/handyman/after2.jpg" alt="" />
+            </div>
+          </div>
+        </div>
         <svg
           id="rightArrow"
           style="padding-left: 0.25em"
