added 1 more before and after to handyman section

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         style="display: flex; align-items: center; margin-top: 2em"
       >
         <div id="yardWorkBtn">Yard Work</div>
-        <div id="haulingBtn">Hauling</div>
         <div id="handymanBtn">Handyman</div>
+        <div id="haulingBtn">Hauling</div>
       </div>
       <!-- refactor: height property for div below - subtract from height of header content for responsiveness !!!!!! -->
       <div
@@ -138,6 +138,16 @@
             <div style="padding: 1em 0">
               <div class="title">After</div>
               <img src="images/handyman/after2.jpg" alt="" />
+            </div>
+          </div>
+          <div class="contentHorizontal" id="handyman3" style="display: none">
+            <div style="padding: 1em 0">
+              <div class="title" style="margin-top: 0">Before</div>
+              <img src="images/handyman/before3.jpg" alt="" />
+            </div>
+            <div style="padding: 1em 0">
+              <div class="title">After</div>
+              <img src="images/handyman/after3.jpg" alt="" />
             </div>
           </div>
         </div>
