--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           ></path>
         </svg>
         <div
-          class="experienceContent"
+          class="prevExperience"
           id="yardWorkContent"
           style="
             display: flex;
@@ -111,7 +111,7 @@
         </div>
         <div id="haulingContent" style="display: none">haulingContent</div>
         <div
-          class="experienceContent"
+          class="prevExperience"
           id="handymanContent"
           style="
             display: none;
