renamed variables and HTML

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         class="experienceMenu"
         style="display: flex; align-items: center; margin-top: 2em"
       >
-        <div id="yardWorkBtn">Yard Work</div>
+        <div id="weedControlBtn">Weed Control</div>
+        <div id="trimmingBtn">Trimming</div>
         <div id="handymanBtn">Handyman</div>
-        <div id="haulingBtn">Hauling</div>
       </div>
       <!-- refactor: height property for div below - subtract from height of header content for responsiveness !!!!!! -->
       <div
@@ -70,7 +70,7 @@
         </svg>
         <div
           class="prevWork"
-          id="yardWorkContent"
+          id="weedControlContent"
           style="
             display: flex;
             flex-direction: column;
@@ -78,38 +78,38 @@
             display: none;
           "
         >
-          <div class="contentHorizontal" id="yardWork1">
+          <div class="contentHorizontal" id="weedControl1">
             <div style="padding: 1em 0">
               <div class="title" style="margin-top: 0">Before</div>
-              <img src="images/YardWork/yw1Before.jpg" alt="" />
+              <img src="images/weedControl/yw1Before.jpg" alt="" />
             </div>
             <div style="padding: 1em 0">
               <div class="title">After</div>
-              <img src="images/YardWork/yw1After.jpg" alt="" />
+              <img src="images/weedControl/yw1After.jpg" alt="" />
             </div>
           </div>
-          <div class="contentVertical" id="yardWork2" style="display: none">
+          <div class="contentVertical" id="weedControl2" style="display: none">
             <div style="padding: 1em 0.25em">
               <div class="title" style="font-size: 1.25em">Before</div>
-              <img src="images/YardWork/yw2Before.jpg" alt="" />
+              <img src="images/weedControl/yw2Before.jpg" alt="" />
             </div>
             <div style="padding: 1em 0.25em">
               <div class="title" style="font-size: 1.25em">After</div>
-              <img src="images/YardWork/yw2After.jpg" alt="" />
+              <img src="images/weedControl/yw2After.jpg" alt="" />
             </div>
           </div>
-          <div class="contentVertical" id="yardWork3" style="display: none">
+          <div class="contentVertical" id="weedControl3" style="display: none">
             <div style="padding: 1em 0.25em">
               <div class="title" style="font-size: 1.25em">Before</div>
-              <img src="images/YardWork/yw3Before.jpg" alt="" />
+              <img src="images/weedControl/yw3Before.jpg" alt="" />
             </div>
             <div style="padding: 1em 0.25em">
               <div class="title" style="font-size: 1.25em">After</div>
-              <img src="images/YardWork/yw3After.jpg" alt="" />
+              <img src="images/weedControl/yw3After.jpg" alt="" />
             </div>
           </div>
         </div>
-        <div id="haulingContent" style="display: none">haulingContent</div>
+        <div id="trimmingContent" style="display: none">trimmingContent</div>
         <div
           class="prevWork"
           id="handymanContent"
