adjusted css to fix horizontal scrollbar issue AND styles of arrows with vertical photos within smaller devices

--- a/index.html
+++ b/index.html
@@ -30,11 +30,7 @@
     <div class="workSection">
       <div
         class="header"
-        style="
-          font-weight: bolder;
-          border-bottom: 1px solid black;
-          padding: 0.5em 0;
-        "
+        style="font-weight: bolder; border-bottom: 1px solid black"
       >
         V's Yard Service
       </div>
