Trimming section photos and functionality behavior is set

--- a/index.html
+++ b/index.html
@@ -122,6 +122,26 @@
               <img src="images/trimming/after1.jpg" alt="" />
             </div>
           </div>
+          <div class="contentVertical" id="trimming2" style="display: none">
+            <div style="padding: 1em 0.25em">
+              <div class="title" style="font-size: 1.25em">Before</div>
+              <img src="images/trimming/before2.jpg" alt="" />
+            </div>
+            <div style="padding: 1em 0.25em">
+              <div class="title" style="font-size: 1.25em">After</div>
+              <img src="images/trimming/after2.jpg" alt="" />
+            </div>
+          </div>
+          <div class="contentVertical" id="trimming3" style="display: none">
+            <div style="padding: 1em 0.25em">
+              <div class="title" style="font-size: 1.25em">Before</div>
+              <img src="images/trimming/before3.jpg" alt="" />
+            </div>
+            <div style="padding: 1em 0.25em">
+              <div class="title" style="font-size: 1.25em">After</div>
+              <img src="images/trimming/after3.jpg" alt="" />
+            </div>
+          </div>
         </div>
         <div
           class="prevWork"
