experimented with color schemes, decided on light gray background with black text and button backgrounds

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         "
       ></div>
     </div>
-    <div class="workSection" style="background-color: black; color: white">
+    <div class="workSection" style="background-color: #e4e4e4; color: black">
       <div
         class="header"
         style="font-weight: bolder; border-bottom: 1px solid black"
@@ -54,7 +54,7 @@
           xmlns="http://www.w3.org/2000/svg"
           width="32"
           height="32"
-          fill="#fefbfb"
+          fill="#000000"
           viewBox="0 0 256 256"
         >
           <path
@@ -190,7 +190,7 @@
           xmlns="http://www.w3.org/2000/svg"
           width="32"
           height="32"
-          fill="#fefbfb"
+          fill="#000000"
           viewBox="0 0 256 256"
         >
           <path
