added cursor: pointer css to left and right arrows

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       >
         <svg
           id="leftArrow"
-          style="padding-right: 0.25em"
+          style="padding-right: 0.25em; cursor: pointer"
           xmlns="http://www.w3.org/2000/svg"
           width="32"
           height="32"
@@ -186,7 +186,7 @@
         </div>
         <svg
           id="rightArrow"
-          style="padding-left: 0.25em"
+          style="padding-left: 0.25em; cursor: pointer"
           xmlns="http://www.w3.org/2000/svg"
           width="32"
           height="32"
