removed horizontal scrollbar by adding overflow-x: hidden; to body tag. Also centered content horizontally using display: flex; flex-direction: column; AND align-items: center; on body tag as well

--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
       </div>
       <div
         class="experienceMenu"
-        style="display: flex; align-items: center; margin-top: 2em"
+        style="
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin-top: 2em;
+        "
       >
         <div id="weedControlBtn">Weed Control</div>
         <div id="trimmingBtn">Trimming</div>
