added html to display on top of overlay in .contactSection div

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div class="homeSection" style="position: relative">
-      <h1 class="homeSectionTxt" style="top: 0">V's Yard Service</h1>
-      <h2 class="homeSectionTxt" style="bottom: 0">
+      <h1 class="overlayTxt" style="top: 0">V's Yard Service</h1>
+      <h2 class="overlayTxt" style="bottom: 0">
         Quality Work Affordably Priced!
       </h2>
       <div
@@ -205,6 +205,10 @@
       </div>
     </div>
     <div class="contactSection" style="position: relative">
+      <h1 class="overlayTxt" style="top: 0">V's Yard Service</h1>
+      <h2 class="overlayTxt" style="bottom: 0">
+        Quality Work Affordably Priced!
+      </h2>
       <div
         style="
           position: absolute;
