created new class for overlay div(s) AND added content from business card to .contactSection div

--- a/index.html
+++ b/index.html
@@ -13,16 +13,7 @@
       <h2 class="overlayTxt" style="bottom: 0">
         Quality Work Affordably Priced!
       </h2>
-      <div
-        style="
-          position: absolute;
-          background-color: black;
-          opacity: 0.5;
-          width: inherit;
-          height: inherit;
-          z-index: 10;
-        "
-      ></div>
+      <div class="overlay"></div>
     </div>
     <div class="workSection" style="background-color: #e4e4e4; color: black">
       <div
@@ -205,20 +196,21 @@
       </div>
     </div>
     <div class="contactSection" style="position: relative">
-      <h1 class="overlayTxt" style="top: 0">V's Yard Service</h1>
-      <h2 class="overlayTxt" style="bottom: 0">
-        Quality Work Affordably Priced!
-      </h2>
-      <div
-        style="
-          position: absolute;
-          background-color: black;
-          opacity: 0.5;
-          width: inherit;
-          height: inherit;
-          z-index: 10;
-        "
-      ></div>
+      <h1 class="overlayTxt" style="top: 0">(928) 679-5861</h1>
+      <div class="overlayTxt" style="bottom: 0">
+        <ul
+          class="servicesList"
+          style="text-wrap: pretty; list-style-type: none"
+        >
+          <li>Weekly * Bi-Weekly * Monthly Yard Maintenance</li>
+          <li>Shrub & Hedge Trimming</li>
+          <li>Plant Trees * Shrubs * Flowers</li>
+          <li>Weed Control</li>
+          <li>Minor Hauling</li>
+          <li>Minor Handyman Work</li>
+        </ul>
+      </div>
+      <div class="overlay"></div>
     </div>
   </body>
 </html>
