--- a/index.html
+++ b/index.html
@@ -196,14 +196,21 @@
       </div>
     </div>
     <div class="contactSection" style="position: relative">
-      <h1 class="overlayTxt" style="top: 0">(928) 679-5861</h1>
-      <div class="overlayTxt" style="bottom: 0">
+      <div class="overlayTxt" style="top: 0">
+        <h1>(928) 679-5861</h1>
         <ul
           class="servicesList"
           style="text-wrap: pretty; list-style-type: none"
         >
           <li>Weekly * Bi-Weekly * Monthly Yard Maintenance</li>
           <li>Shrub & Hedge Trimming</li>
+        </ul>
+      </div>
+      <div class="overlayTxt" style="bottom: 0">
+        <ul
+          class="servicesList"
+          style="text-wrap: pretty; list-style-type: none"
+        >
           <li>Plant Trees * Shrubs * Flowers</li>
           <li>Weed Control</li>
           <li>Minor Hauling</li>
