played around with placement of content within .contactSection div

--- a/index.html
+++ b/index.html
@@ -196,21 +196,14 @@
       </div>
     </div>
     <div class="contactSection" style="position: relative">
-      <div class="overlayTxt" style="top: 0">
-        <h1>(928) 679-5861</h1>
+      <h1 class="overlayTxt" style="top: 5%; font-size: 3em">(928) 679-5861</h1>
+      <div class="overlayTxt" style="bottom: 5%">
         <ul
           class="servicesList"
           style="text-wrap: pretty; list-style-type: none"
         >
           <li>Weekly * Bi-Weekly * Monthly Yard Maintenance</li>
           <li>Shrub & Hedge Trimming</li>
-        </ul>
-      </div>
-      <div class="overlayTxt" style="bottom: 0">
-        <ul
-          class="servicesList"
-          style="text-wrap: pretty; list-style-type: none"
-        >
           <li>Plant Trees * Shrubs * Flowers</li>
           <li>Weed Control</li>
           <li>Minor Hauling</li>
