--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
       </div>
     </div>
     <div class="contactSection" style="position: relative">
-      <h1 class="overlayTxt" style="top: 5%; font-size: 3em">(928) 679-5861</h1>
-      <div class="overlayTxt" style="bottom: 5%">
+      <h1 class="overlayTxt" style="top: 1%; font-size: 3em">(928) 679-5861</h1>
+      <div class="overlayTxt" style="bottom: 1%">
         <ul
           class="servicesList"
           style="text-wrap: pretty; list-style-type: none"
@@ -210,7 +210,7 @@
           <li>Minor Handyman Work</li>
         </ul>
       </div>
-      <div class="overlay"></div>
+      <div class="overlay" style="opacity: 0.6"></div>
     </div>
   </body>
 </html>
