--- a/index.html
+++ b/index.html
@@ -9,20 +9,11 @@
   </head>
   <body>
     <div class="homeSection" style="position: relative">
-      <h1 class="homeSectionTxt" style="top: 0">V's Yard Service</h1>
-      <h2 class="homeSectionTxt" style="bottom: 0">
+      <h1 class="overlayTxt" style="top: 0">V's Yard Service</h1>
+      <h2 class="overlayTxt" style="bottom: 0">
         Quality Work Affordably Priced!
       </h2>
-      <div
-        style="
-          position: absolute;
-          background-color: black;
-          opacity: 0.5;
-          width: inherit;
-          height: inherit;
-          z-index: 10;
-        "
-      ></div>
+      <div class="overlay"></div>
     </div>
     <div class="workSection" style="background-color: #e4e4e4; color: black">
       <div
@@ -205,16 +196,21 @@
       </div>
     </div>
     <div class="contactSection" style="position: relative">
-      <div
-        style="
-          position: absolute;
-          background-color: black;
-          opacity: 0.5;
-          width: inherit;
-          height: inherit;
-          z-index: 10;
-        "
-      ></div>
+      <h1 class="overlayTxt" style="top: 1%; font-size: 3em">(928) 679-5861</h1>
+      <div class="overlayTxt" style="bottom: 1%">
+        <ul
+          class="servicesList"
+          style="text-wrap: pretty; list-style-type: none"
+        >
+          <li>Weekly * Bi-Weekly * Monthly Yard Maintenance</li>
+          <li>Shrub & Hedge Trimming</li>
+          <li>Plant Trees * Shrubs * Flowers</li>
+          <li>Weed Control</li>
+          <li>Minor Hauling</li>
+          <li>Minor Handyman Work</li>
+        </ul>
+      </div>
+      <div class="overlay" style="opacity: 0.6"></div>
     </div>
   </body>
 </html>
