replaced 3rd pair of images in Weed Control work section

--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
               <img src="images/weedControl/yw2After.jpg" alt="" />
             </div>
           </div>
-          <div class="contentVertical" id="weedControl3" style="display: none">
+          <div class="contentVertical" style="display: none">
             <div style="padding: 1em 0.25em">
               <div class="title" style="font-size: 1.25em">Before</div>
-              <img src="images/weedControl/yw3Before.jpg" alt="" />
+              <img src="images/weedControl/before7.jpg" alt="" />
             </div>
             <div style="padding: 1em 0.25em">
               <div class="title" style="font-size: 1.25em">After</div>
-              <img src="images/weedControl/yw3After.jpg" alt="" />
+              <img src="images/weedControl/after7.jpg" alt="" />
             </div>
           </div>
         </div>
