--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             display: none;
           "
         >
-          <div class="contentHorizontal" id="weedControl1">
+          <div class="contentHorizontal">
             <div style="padding: 1em 0">
               <div class="title" style="margin-top: 0">Before</div>
               <img src="images/weedControl/yw1Before.jpg" alt="" />
@@ -77,7 +77,7 @@
               <img src="images/weedControl/yw1After.jpg" alt="" />
             </div>
           </div>
-          <div class="contentVertical" id="weedControl2" style="display: none">
+          <div class="contentVertical" style="display: none">
             <div style="padding: 1em 0.25em">
               <div class="title" style="font-size: 1.25em">Before</div>
               <img src="images/weedControl/yw2Before.jpg" alt="" />
@@ -108,7 +108,7 @@
             align-items: center;
           "
         >
-          <div class="contentVertical" id="trimming1">
+          <div class="contentVertical">
             <div style="padding: 1em 0.25em">
               <div class="title" style="font-size: 1.25em">Before</div>
               <img src="images/trimming/before1.jpg" alt="" />
@@ -118,7 +118,7 @@
               <img src="images/trimming/after1.jpg" alt="" />
             </div>
           </div>
-          <div class="contentVertical" id="trimming2" style="display: none">
+          <div class="contentVertical" style="display: none">
             <div style="padding: 1em 0.25em">
               <div class="title" style="font-size: 1.25em">Before</div>
               <img src="images/trimming/before2.jpg" alt="" />
@@ -128,7 +128,7 @@
               <img src="images/trimming/after2.jpg" alt="" />
             </div>
           </div>
-          <div class="contentVertical" id="trimming3" style="display: none">
+          <div class="contentVertical" style="display: none">
             <div style="padding: 1em 0.25em">
               <div class="title" style="font-size: 1.25em">Before</div>
               <img src="images/trimming/before3.jpg" alt="" />
@@ -149,7 +149,7 @@
             align-items: center;
           "
         >
-          <div class="contentHorizontal" id="handyman1">
+          <div class="contentHorizontal">
             <div style="padding: 1em 0">
               <div class="title" style="margin-top: 0">Before</div>
               <img src="images/handyman/before1.jpg" alt="" />
@@ -159,7 +159,7 @@
               <img src="images/handyman/after1.jpg" alt="" />
             </div>
           </div>
-          <div class="contentHorizontal" id="handyman2" style="display: none">
+          <div class="contentHorizontal" style="display: none">
             <div style="padding: 1em 0">
               <div class="title" style="margin-top: 0">Before</div>
               <img src="images/handyman/before2.jpg" alt="" />
@@ -169,7 +169,7 @@
               <img src="images/handyman/after2.jpg" alt="" />
             </div>
           </div>
-          <div class="contentHorizontal" id="handyman3" style="display: none">
+          <div class="contentHorizontal" style="display: none">
             <div style="padding: 1em 0">
               <div class="title" style="margin-top: 0">Before</div>
               <img src="images/handyman/before3.jpg" alt="" />
