--- a/index.html
+++ b/index.html
@@ -97,6 +97,26 @@
               <img src="images/weedControl/after7.jpg" alt="" />
             </div>
           </div>
+          <div class="contentVertical" style="display: none">
+            <div style="padding: 1em 0.25em">
+              <div class="title" style="font-size: 1.25em">Before</div>
+              <img src="images/weedControl/before8.jpg" alt="" />
+            </div>
+            <div style="padding: 1em 0.25em">
+              <div class="title" style="font-size: 1.25em">After</div>
+              <img src="images/weedControl/after8.jpg" alt="" />
+            </div>
+          </div>
+          <div class="contentHorizontal" style="display: none">
+            <div style="padding: 1em 0">
+              <div class="title" style="margin-top: 0">Before</div>
+              <img src="images/weedControl/before9.jpg" alt="" />
+            </div>
+            <div style="padding: 1em 0">
+              <div class="title">After</div>
+              <img src="images/weedControl/after9.jpg" alt="" />
+            </div>
+          </div>
         </div>
         <div
           class="prevWork"
