added additional pairs of images to trimming section

--- a/index.html
+++ b/index.html
@@ -131,16 +131,6 @@
           <div class="contentVertical">
             <div style="padding: 1em 0.25em">
               <div class="title" style="font-size: 1.25em">Before</div>
-              <img src="images/trimming/before1.jpg" alt="" />
-            </div>
-            <div style="padding: 1em 0.25em">
-              <div class="title" style="font-size: 1.25em">After</div>
-              <img src="images/trimming/after1.jpg" alt="" />
-            </div>
-          </div>
-          <div class="contentVertical" style="display: none">
-            <div style="padding: 1em 0.25em">
-              <div class="title" style="font-size: 1.25em">Before</div>
               <img src="images/trimming/before2.jpg" alt="" />
             </div>
             <div style="padding: 1em 0.25em">
@@ -156,6 +146,36 @@
             <div style="padding: 1em 0.25em">
               <div class="title" style="font-size: 1.25em">After</div>
               <img src="images/trimming/after3.jpg" alt="" />
+            </div>
+          </div>
+          <div class="contentHorizontal" style="display: none">
+            <div style="padding: 1em 0">
+              <div class="title" style="margin-top: 0">Before</div>
+              <img src="images/trimming/before4.jpg" alt="" />
+            </div>
+            <div style="padding: 1em 0">
+              <div class="title">After</div>
+              <img src="images/trimming/after4.jpg" alt="" />
+            </div>
+          </div>
+          <div class="contentHorizontal" style="display: none">
+            <div style="padding: 1em 0">
+              <div class="title" style="margin-top: 0">Before</div>
+              <img src="images/trimming/before5.jpg" alt="" />
+            </div>
+            <div style="padding: 1em 0">
+              <div class="title">After</div>
+              <img src="images/trimming/after5.jpg" alt="" />
+            </div>
+          </div>
+          <div class="contentHorizontal" style="display: none">
+            <div style="padding: 1em 0">
+              <div class="title" style="margin-top: 0">Before</div>
+              <img src="images/trimming/before6.jpg" alt="" />
+            </div>
+            <div style="padding: 1em 0">
+              <div class="title">After</div>
+              <img src="images/trimming/after6.jpg" alt="" />
             </div>
           </div>
         </div>
