created a css variable that dictates spacing for .workSection div. Have not incorporated it fully yet, only for .experienceMenu div

--- a/index.html
+++ b/index.html
@@ -22,22 +22,14 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          margin-top: 2em;
+          margin-top: var(--workSectionSpacing);
         "
       >
         <div id="weedControlBtn">Weed Control</div>
         <div id="trimmingBtn">Trimming</div>
         <div id="handymanBtn">Handyman</div>
       </div>
-      <!-- refactor: height property for div below - subtract from height of header content for responsiveness !!!!!! -->
-      <div
-        style="
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: calc(100vh - 150px);
-        "
-      >
+      <div style="display: flex; justify-content: center; align-items: center">
         <svg
           id="leftArrow"
           style="padding-right: 0.25em; cursor: pointer"
