fixed bug causing a pair of vertical photos to be misaligned vertically

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <div class="title" style="font-size: 1.25em">Before</div>
               <img src="images/weedControl/before8.jpg" alt="" />
             </div>
-            <div>
+            <div class="afterPhoto">
               <div class="title" style="font-size: 1.25em">After</div>
               <img src="images/weedControl/after8.jpg" alt="" />
             </div>
