--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          margin: var(--workSectionSpacing);
+          margin: calc(var(--workSectionSpacing) / 2) var(--workSectionSpacing);
         "
       >
         <div id="weedControlBtn">Weed Control</div>
